--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container-fluid">
         <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg navbar-dark ">
-            <a class="navbar-brand" href="">tindog</a>
+            <a class="navbar-brand" href="title">tindog</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -35,13 +35,13 @@
 
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="">Contact</a>
+                        <a class="nav-link" href="#footer">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Pricing</a>
+                        <a class="nav-link" href="#pricing">Pricing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Downloads</a>
+                        <a class="nav-link" href="#cta">Downloads</a>
                     </li>
                 </ul>
             </div>
