--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container-fluid">
         <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg navbar-dark ">
-            <a class="navbar-brand" href="title">tindog</a>
+            <a class="navbar-brand" href="#title">tindog</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
